--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,16 +16,11 @@ services:
     container_name: db
     image: "mysql:8.0.2"
     environment:
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/root_password
-      MYSQL_USER: admin 
-      MYSQL_PASSWORD_FILE: /run/secrets/dbuser_password
+      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_USER: 'admin'
+      MYSQL_PASSWORD: 'Adminpass19'
     volumes:
       - ./db-volume:/var/lib/mysql
     ports:
       - "6033:3306"
 
-secrets:
-  root_password:
-    external: true
-  dbuser_password:
-    external: true
