--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: sriram-php
     depends_on:
       - db
+    volumes:
+      - ./php:/var/www/html/
     ports:
       - "5000:80"
 
@@ -17,6 +19,8 @@ services:
       MYSQL_ROOT_PASSWORD: 'root'
       MYSQL_USER: 'admin'
       MYSQL_PASSWORD: 'Adminpass19'
+    volumes:
+      - ./db-volume:/var/lib/mysql
     ports:
       - "6033:3306"
 
