--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
       MYSQL_USER: 'admin'
-      MYSQL_PASSWORD: 'Adminpass19'
+      MYSQL_PASSWORD: '#Adminpass19'
     volumes:
       - ./db-volume:/var/lib/mysql
     ports:
